<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/viewNamaPelanggan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:minHeight="50dp"
            android:text="@string/nameCus"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNamaPelanggan"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/viewNamaPelanggan"
            android:hint="@string/hint1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/sonic_silver"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/viewNamaBarang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/viewNamaPelanggan"
            android:gravity="start|center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:minHeight="50dp"
            android:text="@string/nameBar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNamaBarang"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/viewNamaBarang"
            android:hint="@string/hint2"
            android:layout_below="@+id/etNamaPelanggan"
            android:inputType="text"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"
            android:textColorHint="@color/sonic_silver"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/viewJumlahBarang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/viewNamaBarang"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:text="@string/jumlahBar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etJmlBarang"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/viewJumlahBarang"
            android:hint="@string/hint3"
            android:layout_below="@+id/etNamaBarang"
            android:inputType="number"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"
            android:textColorHint="@color/sonic_silver"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/viewHargaBarang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/viewJumlahBarang"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:text="@string/harga"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etHarga"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/viewHargaBarang"
            android:autofillHints="@string/hint4"
            android:hint="@string/hint4"
            android:layout_below="@+id/etJmlBarang"
            android:inputType="number"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"
            android:textColorHint="@color/sonic_silver"
            android:importantForAutofill="no"
            />

        <TextView
            android:id="@+id/viewTotalHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewHargaBarang"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/totalHarga"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTotalBayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTotalHarga"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:text="@string/totalBayar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewUangBayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTotalBayar"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:text="@string/uangBayar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etJmlUang"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewTotalBayar"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/viewHargaBarang"
            android:autofillHints="@string/hint5"
            android:hint="@string/hint5"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:textColorHint="@color/sonic_silver" />

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewUangBayar"
            android:layout_margin="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/tambah"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnProses"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnTambah"
            android:layout_marginTop="369dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/proses"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/viewNameCust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnTambah"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewListBarang"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewNameCust"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewJumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewNameCust"
            android:layout_toEndOf="@+id/viewListBarang"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewNameCust"
            android:layout_toEndOf="@id/viewJumlah"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTotalRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewHarga"
            android:layout_alignEnd="@id/viewJumlah"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTotalResAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewHarga"
            android:layout_alignStart="@id/viewHarga"
            android:layout_toEndOf="@id/viewTotalRes"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewUangBayarRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTotalRes"
            android:layout_alignEnd="@id/viewTotalRes"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewUangBayarResAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTotalRes"
            android:layout_alignStart="@id/viewHarga"
            android:layout_toEndOf="@id/viewUangBayarRes"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewKeterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewUangBayarResAmount"
            android:layout_marginStart="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewUangKembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewKeterangan"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="start|center_vertical"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewUangKembalian"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/hapus"
            android:textColor="@android:color/white"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnKeluar"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewUangKembalian"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/btnHapus"
            android:background="@drawable/bg_button"
            android:text="@string/keluar"
            android:textColor="@android:color/white"
            android:visibility="invisible" />

    </RelativeLayout>

</ScrollView>